2000-11-27 17:14 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
      * changed ::RelativePos into ::LastRetrieved (seems more descriptive to me)

2000-11-27 17:07 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/tbrowse.prg
      ! fixed ::Stabilize() method (problems when past eof())

2000-11-26 21:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * include/hberrors.h
   * source/pp/ppcomp.c
   * source/pp/ppcore.c
     + Added error support for Input buffer overflow .

2000-11-26 18:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.slx
     + Added Error message if NUMERALS_PER_LINE is exhausted, and set it to 3000 (just below apparent parser limitation)

2000-11-26 10:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     + Added support for ',' within Array Index in NextParm()

2000-11-24 21:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.y
   * source/compiler/harbour.sly
     + Added support for MacroExpr as FunCall

2000-11-25 22:57 UTC+0100 jfl (mafact) <jfl@mafact.com>
   * source/rdd/rddcpy.c
        * added missing explicit cast needed by VC++

2000-11-24 12:50 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * include/hbset.h
   * include/set.ch
   * source/pp/pptable.c
     + Added _SET_IDLEREPEAT = 101
   * source/rtl/set.c
     + Added suport for SET( _SET_IDLEREPEAT ) - Default is .T.

   * source/rtl/idle.c
     - Removed HB_IDLE_RESET()
     * Changed handling of Idle Process to default to REPEAT.

   * tests/onidle.prg
     - Removed call to HB_IDLE_RESET()

   + tests/testidle.prg
     + New test of Idle Blocks in default (REPEAT) mode and optional NON REPEAT mode.

2000-11-24 19:22 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/mysql/tmysql.prg
      + ::FieldGet() and ::FieldPut() methods now accept a field name as field identifier and not